# SPFsmartGATE

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMMERCIAL_LICENSE.md  Cargo.toml  EASY INSTALL AND BASIC EXPLANATIONS GUIDE  LICENSE.md  NOTICE.md  README.md  SECURITY.md  SPFsmartGATE FUNDAMENTALS  WHY_SPF.md  build.sh  config.json  setup.sh
.github/workflows/: release.yml
LIVE/LMDB5/: README-LMDB5.md
LIVE/PROJECTS/: README-PROJECTS.md
LIVE/TMP/: README-TMP.md
docs/: DEVELOPER_BIBLE.md  FORENSIC_AUDIT_REPORT.md
hooks/: post-action.sh  post-failure.sh  pre-agent.sh  pre-bash.sh  pre-brain.sh  pre-config.sh  pre-edit.sh  pre-glob.sh  pre-grep.sh  pre-mcp-bash.sh  pre-mcp-edit.sh  pre-mcp-glob.sh  pre-mcp-grep.sh  pre-mcp-notebookedit.sh  pre-mcp-read.sh  pre-mcp-webfetch.sh  pre-mcp-websearch.sh  pre-mcp-write.sh  pre-notebookedit.sh  pre-projects.sh  pre-rag.sh  pre-read.sh  pre-spf-meta.sh  pre-tmp.sh  pre-webfetch.sh  pre-websearch.sh  pre-write.sh  session-end.sh  session-start.sh  stop-check.sh  user-prompt.sh
scripts/: boot-lmdb5.sh  install-lmdb5.sh
src/: agent_state.rs  calculate.rs  config.rs  config_db.rs  fs.rs  gate.rs  inspect.rs  lib.rs  main.rs  mcp.rs  paths.rs  projects_db.rs  session.rs  storage.rs  tmp_db.rs  validate.rs  web.rs
